somehow broke edit button while trying to fix alignment

--- a/main_app/static/styles/profile.scss
+++ b/main_app/static/styles/profile.scss
@@ -57,3 +57,13 @@
   border: 15px groove rgb(219, 219, 219);
   border-radius: 0;
 }
+
+// holds edit/delete buttons
+.post-update-btns {
+  border: 3px solid red;
+}
+.btn-align {
+  width: 50px;
+  padding: 10px 15px;
+
+}
